src/test/deca/context/valid/sansObjet/IfWithBoolean.deca
{
    boolean b = true;
    if (b){
        print("Hello 2020");
    }
}