src/test/deca/context/invalid/object/badNew4.deca
class Y
{
  
}
class X
{
  int a;
  boolean b = true;
}


class B
{
  X x = "ee";
  Y y = new Y();
  float a;

}
